<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Guess The Stats</string>
    <string name="currency_confirm_button">Select Currency</string>

    <string-array name="currencies">
        <item>GBP</item>
        <item>USD</item>
        <item>EUR</item>
    </string-array>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="mode_1_name">Play Mode 1</string>
    <string name="mode_2_name">Play Mode 2</string>
    <string name="mode_3_name">Play Mode 3</string>
    <string name="current_score_prefix">Current Score:</string>
    <string name="guess_text">Guess</string>
    <string name="correct_value_prefix">Correct Value:</string>
    <string name="points_suffix">points!</string>
    <string name="settings">Settings</string>
    <string name="title_activity_results_screen">ResultsScreen</string>
    <string name="results_title">High Scores</string>
    <string name="you_scored">You scored:</string>
    <string name="invalid_input_error">Error: Invalid input</string>

</resources>
