<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode_1_name"
        android:id="@+id/mode1"
        android:textSize="@dimen/game_mode_button_size"
        android:textColor="@color/foreground_color"
        android:onClick="mode1Selected" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode_2_name"
        android:id="@+id/mode2"
        android:textSize="@dimen/game_mode_button_size"
        android:textColor="@color/foreground_color"
        android:onClick="mode2Selected" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode_3_name"
        android:id="@+id/mode3"
        android:textSize="@dimen/game_mode_button_size"
        android:textColor="@color/foreground_color"
        android:onClick="mode3Selected" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:id="@+id/settingsButton"
        android:textSize="@dimen/game_mode_button_size"
        android:textColor="@color/foreground_color"
        android:onClick="settings" />
</LinearLayout>