<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".Mode2Screen"
    android:focusableInTouchMode="false"
    android:textAlignment="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <include layout="@layout/title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_score_prefix"
                android:id="@+id/score2"
                android:textColor="@color/current_score_color"
                android:textSize="@dimen/current_score_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="&lt;value&gt;"
                android:id="@+id/value"
                android:textColor="@color/foreground_color"
                android:textSize="@dimen/value_size"
                android:textAlignment="center"
                android:gravity="center_horizontal" />

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:id="@+id/statsScrollView"
                android:measureAllChildren="false">


                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/horizontalScrollView">
                    <TableLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:id="@+id/statsTableLayout"
                        android:minWidth="300dp">

                    </TableLayout>
                </HorizontalScrollView>
            </ScrollView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guess_text"
                android:id="@+id/guessButton2"
                android:textColor="@color/foreground_color"
                android:textSize="@dimen/guess_text_size"
                android:onClick="guess2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points_suffix"
                android:id="@+id/addedPoints2"
                android:textColor="@color/green_color"
                android:textSize="@dimen/current_score_size"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
